--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "aes256xi",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Lightweight AES-256 Encryption Decryption Library and CLI for NodeJS - Zero Dependencies",
   "main": "index.js",
   "bin": {
-    "axi": "node ./index.js"
+    "axi": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
